--- a/config_sample.env
+++ b/config_sample.env
@@ -1,28 +1,25 @@
-#Remove this line before deploying
-_____REMOVE_THIS_LINE_____=True
-
-# ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = ""
-GDRIVE_FOLDER_ID = ""
-OWNER_ID = ""
+#ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+BOT_TOKEN = "2027077211:AAH1yTZt9pU07mv_oDME3-WWJfM_wgq2874"
+GDRIVE_FOLDER_ID = "0AHPgSwDPZPXUUk9PVA"
+OWNER_ID = "860155988"
 DOWNLOAD_DIR = "/home/username/mirror-bot/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
-IS_TEAM_DRIVE = ""
-TELEGRAM_API = ""
-TELEGRAM_HASH = ""
-USE_SERVICE_ACCOUNTS = ""
+IS_TEAM_DRIVE = "True"
+TELEGRAM_API = "16643712"
+TELEGRAM_HASH = "08f416c75c0d725ec7d19d52e49df68c"
+USE_SERVICE_ACCOUNTS = "False"
 
 # Optional config
 ACCOUNTS_ZIP_URL = "" #Enter Direct Links TO Import Service Accounts Directly From Urls Instead Of Adding Files To Repo.( Archive the accounts folder to a zip file.)
-TOKEN_PICKLE_URL = "" #Enter Direct Links TO Import Credentials Directly From Urls Instead Of Adding Files To Repo.
+TOKEN_PICKLE_URL = "https://freelicher.amahgoob33.workers.dev/0://token.pickle" #Enter Direct Links TO Import Credentials Directly From Urls Instead Of Adding Files To Repo.
 SESSION_STRING = ""
-AUTHORIZED_CHATS = "" #Separated by space
-SUDO_USERS = ""  #Separated by space
+AUTHORIZED_CHATS = "-1001616211928" #Separated by space
+SUDO_USERS = "860155988"  #Separated by space
 LOGS_CHATS = "" #Separated by space
-DATABASE_URL = ""
+DATABASE_URL = "postgresql://postgres:IgWDAVR1xXnq99zEMuV0@containers-us-west-33.railway.app:7343/railway"
 IGNORE_PENDING_REQUESTS = ""
-INDEX_URL = ""
+INDEX_URL = "https://freelicher.amahgoob33.workers.dev/"
 MEGA_KEY = ""
 MEGA_USERNAME = ""
 MEGA_PASSWORD = ""
